# invenio-jsonschemas

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  Dockerfile  INSTALL.rst  MANIFEST.in  README.md  README.rst  RELEASE-NOTES.rst  babel.ini  docker-compose-dev.yml  elasticsearch-docker.yml  pyproject.toml  pytest.ini  requirements-devel.txt  requirements-docs.txt  requirements.py  run-tests.sh  setup.cfg  setup.py  tox.ini
.github/workflows/: pypi-publish.yml  tests.yml
docs/: Makefile  api.rst  conf.py  configuration.rst  index.rst  make.bat  usage.rst
docs/_ext/: ultramock.py
examples/: app-setup.sh  app-teardown.sh  app.py  example_config.txt
examples/samplepkg/: MANIFEST.in  setup.py
examples/samplepkg/samplepkg/: __init__.py
examples/samplepkg/samplepkg/jsonschemas/: record_schema.json
examples/samplepkg/samplepkg/jsonschemas/base/: record-0.1.json
examples/samplepkg/samplepkg/jsonschemas/biology/: animal_record_schema.json
invenio_jsonschemas/: __init__.py  api.py  bundles.py  config.py  errors.py  ext.py  jsonresolver.py  proxies.py  registry.py  transform.py  utils.py  version.py  views.py
invenio_jsonschemas/static/js/jsonschemas/: schema.js
invenio_jsonschemas/static/less/jsonschemas/: schema.less
invenio_jsonschemas/templates/jsonschemas/: schema.html  schema_base.html
invenio_jsonschemas/translations/: invenio.pot
invenio_jsonschemas/translations/de/LC_MESSAGES/: messages.po
invenio_jsonschemas/translations/es/LC_MESSAGES/: messages.po
invenio_jsonschemas/translations/fr/LC_MESSAGES/: messages.po
invenio_jsonschemas/translations/it/LC_MESSAGES/: messages.po
invenio_jsonschemas/views/: __init__.py  rest.py  ui.py
tests/: conftest.py  helpers.py  test_api.py  test_examples_app.py  test_invenio_jsonschemas.py  test_utils.py
