# -*- coding: utf-8 -*-
#
# This file is part of Invenio.
# Copyright (C) 2015-2018 CERN.
# Copyright (C) 2022 Graz University of Technology.
#
# Invenio is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-jsonschemas
version = attr: invenio_jsonschemas.__version__
description = "Invenio module for building and serving JSONSchemas."
long_description = file: README.rst, CHANGES.rst
keywords = invenio json schema jsonschema
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-jsonschemas
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
zip_safe = False
install_requires =
    invenio-base>=1.2.2
    jsonref>=0.1
    importlib_metadata>=4.0
    importlib_resources>=4.0

[options.extras_require]
tests =
    pytest-black>=0.3.0,<0.3.10
    jsonresolver[jsonschema]>=0.2.1
    mock>=1.3.0
    pytest-invenio>=1.4.0
    Sphinx>=1.6.2
# Kept for backwards compatibility
docs =

[options.entry_points]
invenio_base.apps =
    invenio_jsonschemas = invenio_jsonschemas:InvenioJSONSchemasUI
invenio_base.api_apps =
    invenio_jsonschemas = invenio_jsonschemas:InvenioJSONSchemasAPI
invenio_records.jsonresolver =
    invenio_jsonschemas = invenio_jsonschemas.jsonresolver

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[isort]
profile=black

[tool:pytest]
pep8ignore =
    __init__.py E501
    docs/conf.py ALL
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_jsonschemas --cov-report=term-missing
testpaths = docs tests invenio_jsonschemas
filterwarnings = ignore::pytest.PytestDeprecationWarning
